--- a/templates/rds-postgresql.template.yaml
+++ b/templates/rds-postgresql.template.yaml
@@ -916,6 +916,13 @@ Resources:
         log_rotation_size: '102400'
   MAZDBI:
     Type: AWS::RDS::DBInstance
+    Metadata:
+      cfn-lint:
+        config:
+          ignore_checks:
+            - ERDSDBInstancePubliclyAccessible
+          ignore_reasons:
+            - ERDSDBInstancePubliclyAccessible: PubliclyAccessible is configurable.
     Condition: isDBInstance
     DeletionPolicy: Snapshot
     UpdateReplacePolicy: Snapshot
