--- a/templates/rds-mariadb.template.yaml
+++ b/templates/rds-mariadb.template.yaml
@@ -859,6 +859,13 @@ Resources:
         innodb_print_all_deadlocks: 1
   MAZDBI:
     Type: AWS::RDS::DBInstance
+    Metadata:
+      cfn-lint:
+        config:
+          ignore_checks:
+            - ERDSDBInstancePubliclyAccessible
+          ignore_reasons:
+            - ERDSDBInstancePubliclyAccessible: PubliclyAccessible is configurable.
     DeletionPolicy: Snapshot
     UpdateReplacePolicy: Snapshot
     Properties:
